# multi-vector-retrieval-GPU

./: .gitignore  CMakeLists.txt  README.md  build-project.txt  build_dependencies.yml  dataset.md
baseline/ColBERT/: modify.txt  process_dessert_index.py  process_index.py  run.py  self_index.py
baseline/ColBERT/colbert/: indexer.py  searcher.py  searcher_for_encode.py
baseline/ColBERT/colbert/indexing/: collection_indexer.py  collection_indexer_generate.py  index_saver.py
baseline/ColBERT/colbert/indexing/codecs/: residual.py
baseline/ColBERT/colbert/infra/config/: settings.py
baseline/ColBERT/colbert/modeling/: colbert.py  hf_colbert.py
baseline/ColBERT/colbert/search/: candidate_generation.py  index_loader.py  index_storage.py  segmented_lookup.cpp  strided_tensor.py
multi-vector-retrieval-data/Index/lotte-500-gnd/plaid/: metadata.json  plan.json
script/data/: build_index.py  build_index_by_sample.py  build_index_plaid_by_generate.py  groundtruth.py  util.py
script/evaluation/: eval_brute_force.py  eval_encode_query.py  eval_igp.py  eval_igp_gpu_basic.py  eval_igp_gpu_pp.py  eval_igp_pipeline.py  eval_performance.py  eval_plaid_cpu.py  eval_plaid_gpu.py  evaluation_pipeline.py  performance_metric.py
script/evaluation/technique/: vq.py  vq_sq_pack.py
script/preprocess_dataset/: download_ir_datasets.py  hotpotqa.py  lotte_pooled.py  msmacro.py
src/app/: BruteForceProgressive.cpp  IGPGPUBasic.cpp  IGPGPUPP.cpp
src/app/build_index/: GPGPUBuildIndexPackGPU.cpp
src/impl/: BruteForceProgressive.hpp  IGPGPUBasic.hpp  IGPGPUPP.hpp
src/include/alg/: Distance.hpp  MatrixMulBLAS.hpp  MatrixMulCUBLAS.hpp
src/include/alg/igp_gpu_basic/: DataStruct.hpp  Filter.hpp  GenerateVQScoreCandidate.hpp  IGPGPUBasicRetrieval.hpp  Rerank.hpp
src/include/alg/igp_gpu_pp/: DataStructPP.hpp  FilterPP.hpp  GenerateVQScoreCandidatePP.hpp  IGPGPURetrievalPP.hpp  RerankPP.hpp
src/include/alg/refine/: ResidualScalarQuantizationCPP.hpp  ResidualScalarQuantizationPack.hpp  ResidualScalarQuantizationPackGPU.hpp
src/include/compute_score/: ComputeScore.hpp  GPUComputeScore.hpp
src/include/struct/: IVFIndex.hpp  MethodBase.hpp  TypeDef.hpp
src/include/util/: CPPIOUtil.hpp  CUDAUtil.hpp
